--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 </label>
             </div>
             
-            <button onclick="uploadPhoto()">Cargar</button>
+            <button onclick="uploadPhotos()">Cargar</button>
 
-            <div id="status"></div>
+            <div id="status" class="subtitle"></div>
         </div>
     </div>
     
